--- a/big_exercise/final/report.tex
+++ b/big_exercise/final/report.tex
@@ -8,7 +8,7 @@
 \bibliography{bibl}
 
 \title{ODE representation - Square root}
-\author{Julie Thiim Gadeberg \\ $201604903$}
+\author{Julie Thiim Gadeberg}
 \date{March 2019}
 
 \begin{document}
